--- a/tasks/package.json
+++ b/tasks/package.json
@@ -11,8 +11,10 @@
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-action-button": "^2.8.5",
+    "react-native-gesture-handler": "^1.4.1",
     "react-native-swipeable": "^0.6.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
